--- a/crochet/angular.json
+++ b/crochet/angular.json
@@ -28,7 +28,8 @@
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "baseHref": "https://paperkoopa.github.io/crochet/"
           },
           "configurations": {
             "production": {
